--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font Awsome kit -->
+    <script src="https://kit.fontawesome.com/2d30b43927.js" crossorigin="anonymous"></script>
+    <!-- Custom Css -->
     <link rel="stylesheet" href="./style.css">
     <title>Result Card</title>
 </head>
 <body>
-    
 
+
+    <!-- Custom Javascript -->
     <script src="./main.js"></script>
 </body>
 </html>
