--- a/index.html
+++ b/index.html
@@ -11,7 +11,46 @@
 </head>
 <body>
 
-    
+    <nav class="sidebar">
+        <div class="sidebar__text">
+            Catagory
+        </div>
+        <ul class="nav__list">
+            <li class="nav__item">
+                <a href="#" class="nav__link">All Hardware</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Audio Computers</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Soundgrid Servers</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Computer Servers</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Soundgrid Connect Combos</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">All Soundgrid Interface</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Soundgrid Interfaces for Live Sound</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Soundgrid Interfaces for the Studio</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">eMotion LV1 Live Mixer Combos</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">DiGiGrid Interfaces</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">DiGiGrid Specials</a>
+            </li>
+        </ul>
+    </nav>
     <!-- Custom Javascript -->
     <script src="./main.js"></script>
 </body>
