--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
                     Page 1 of 1 <i class="fas fa-arrow-alt-circle-left"></i><i class="fas fa-arrow-alt-circle-right"></i>
                 </div>
                 <div class="price__box">
-                    <label class="lbl" for="price">Price:</label>
                     <select class="selection__form" name="price" id="price">
-                        <option class="opt" value="low to hight">Low to High</option>
-                        <option class="opt" value="high to low">High to Low</option>
+                        <option class="opt" value="low to hight">Price: Low to High</option>
+                        <option class="opt" value="high to low">Price: High to Low</option>
                     </select>
                 </div>
                 <div class="bars">
@@ -82,6 +81,22 @@
                         <input type="text" class="input" value>
                         <i class="fas fa-search"></i>
                     </form>
+                </div>
+            </div>
+
+            <!-- Footer area -->
+            <div class="footer">
+                <div class="page__count">
+                    <p class="page__count_no">1 - 6 of 6</p> 
+                    <i class="fas fa-arrow-alt-circle-left"></i>
+                    <p class="page__no">1</p>
+                    <i class="fas fa-arrow-alt-circle-right"></i>
+                </div>
+                <div class="page__box">
+                    <select class="selection__form" name="price" id="price">
+                        <option class="opt" value="low to hight">20 Per Page</option>
+                        <option class="opt" value="high to low">30 Per Page</option>
+                    </select>
                 </div>
             </div>
         </div>
