grid left margin updated

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="cards__area">
                 <div class="card__items">
                     <div class="card__item">
-
+                        <img src="./img/flag.png" alt="" srcset="">
                     </div>
                     <div class="card__item">
                         
