--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         <div class="whole__content">
             <div class="header">
                 <div class="pages">
-                    Page 1 of 1 <i class="fas fa-arrow-alt-circle-left"></i><i class="fas fa-arrow-alt-circle-right"></i>
+                    <p>Page 1 of 1</p>
+                    <i class="fas fa-arrow-alt-circle-left"></i>
+                    <i class="fas fa-arrow-alt-circle-right"></i>
                 </div>
                 <div class="price__box">
                     <select class="selection__form" name="price" id="price">
