initial mobile responsive updated

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                             <i class="fas fa-search"></i>
                         </form>
                     </div>
+                    <div class="toggle__btn" id="to__btn">
+                        <i class="fas fa-bars"></i>
+                    </div>
                 </div>
     
                 <!-- Cards -->
