updated header content for small devices

--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
                             <i class="fas fa-search"></i>
                         </form>
                     </div>
+                    <div class="search__box__res">
+                        <form action="#">
+                            <input type="text" class="input" value>
+                        </form>
+                    </div>
+                    <div class="ranges">
+                        <div class="range">
+                            <input type="range" min="0" max="100" value="50" class="slider1">
+                        </div>
+                        <div class="range">
+                            <input type="range" min="0" max="100" value="50" class="slider2">
+                        </div>
+                    </div>
                     <div class="toggle__btn" id="to__btn">
                         <i class="fas fa-bars"></i>
                     </div>
