chat box updated and responsive height for popup card updated according to client

--- a/index.html
+++ b/index.html
@@ -1483,6 +1483,18 @@
             </div>
         </main>
     </div>
+    <div class="chat__btn" id="chat__btn">
+        <a href="#"><i class="far fa-comment-alt"></i></a>
+    </div>
+    <div class="chat__box">
+        <form class="form">
+            <textarea class="textarea" placeholder="Type Your Message Here"></textarea>
+            <div class="frm__btn">
+                <button class="close" type="submit"><i class="fas fa-times"></i>Close</button>
+                <button class="submit" type="submit">Submit <i class="fas fa-paper-plane"></i></button>
+            </div>
+        </form>
+    </div>
     <!-- Custom Javascript -->
     <script src="./main.js"></script>
 </body>
