first revision update

--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
                     </div>
                     <div class="ranges">
                         <div class="range">
+                            <p class="sort">Sort</p>
                             <input type="range" min="0" max="100" value="50" class="slider1">
                         </div>
                         <div class="range">
+                            <p class="filter">Filter</p>
                             <input type="range" min="0" max="100" value="50" class="slider2">
                         </div>
                     </div>
