second task color pallete, chat btn, talkback and checkbox updated

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awsome kit -->
     <script src="https://kit.fontawesome.com/2d30b43927.js" crossorigin="anonymous"></script>
+    <!-- Color Picker -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css"/>
     <!-- Custom Css -->
     <link rel="stylesheet" href="./style.css">
     <title>Result Card</title>
@@ -216,6 +218,20 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
+                                <div class="second__footer">
+                                    <div class="color-picker"></div>
+                                    <div class="comment">
+                                        <a href="#"><i class="fas fa-comments"></i></a>
+                                    </div>
+                                    <div class="talkback">
+                                        talkback
+                                    </div>
+                                    <div class="input">
+                                        <form action="">
+                                            <input class="check" type="checkbox" name="completed" id="">
+                                        </form>
                                     </div>
                                 </div>
                             </div>
@@ -1546,6 +1562,8 @@
             </div>
         </form>
     </div>
+    <!-- Color Picker Js -->
+    <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
     <!-- Custom Javascript -->
     <script src="./main.js"></script>
 </body>
