--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                                         <i class="fas fa-star"></i>
                                     </div>
                                 </div>
+                                <!-- Color picker or palatte, comment, talkback and checkbox -->
                                 <div class="second__footer">
                                     <div class="color-picker"></div>
                                     <div class="comment">
