--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
                     <li class="nav__item">
                         <a href="#" class="nav__link">DiGiGrid Specials</a>
                     </li>
+                    <div class="subnav">
+                        <li class="nav__item">
+                            <a href="#" class="nav__link" id="sub__menu">Sub Menu <i class="fa fa-caret-down"></i></a>
+                        </li>
+                        <div class="subnav-content">
+                          <li class="nav__item">
+                            <a href="#" class="nav__link">Sub Menu 1</a>
+                          </li>
+                          <li class="nav__item">
+                            <a href="#" class="nav__link">Sub Menu 2</a>
+                          </li>
+                          <li class="nav__item">
+                            <a href="#" class="nav__link">Sub Menu 3</a>
+                          </li>
+                        </div>
+                      </div>
                 </ul>
             </nav>
         </header>
