filter submenu html code commented

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <i class="fas fa-bars"></i>
                     </div>
                 </div>
-                <div class="sub__menu">
+                <!-- <div class="sub__menu">
                     <div class="catagory" id="catagory">    
                         <div class="sub__catagory__1">
                             <input type="checkbox" id="A">
@@ -170,7 +170,7 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Cards -->
                 <div class="cards__area">
                     <div class="cards">
