text direction updated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                             <a href="#" class="nav__link">Sub Menu 3</a>
                           </li>
                         </div>
-                      </div>
+                    </div>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link" id="chtd">Change Text Direction</a>
+                    </li>
                 </ul>
             </nav>
         </header>
