icon add with change text decoration link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="#" class="nav__link">DiGiGrid Specials</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link" id="chtd">Change Text Direction</a>
+                        <a href="#" class="nav__link" id="chtd">Change Text Direction <i class="fas fa-align-right"></i></a>
                     </li>
                     <div class="subnav">
                         <li class="nav__item">
