--- a/index.html
+++ b/index.html
@@ -110,70 +110,10 @@
                             <input type="text" class="input" value>
                         </form>
                     </div>
-                    <div class="ranges">
-                        <div class="range">
-                            <p class="sort">Sort</p>
-                            <input type="range" min="0" max="100" value="50" class="slider1">
-                        </div>
-                        <div class="range">
-                            <p class="filter">Filter</p>
-                            <input type="range" min="0" max="100" value="50" class="slider2">
-                        </div>
-                    </div>
                     <div class="toggle__btn" id="to__btn">
                         <i class="fas fa-bars"></i>
                     </div>
                 </div>
-                <!-- <div class="sub__menu">
-                    <div class="catagory" id="catagory">    
-                        <div class="sub__catagory__1">
-                            <input type="checkbox" id="A">
-                            <label for="A">Catagory 1</label>
-                            <ul class="sub__catagory">
-                                <li class="cat__item">
-                                    <input type="checkbox" id="sub__1">
-                                    <label for="sub__1">Sub Catagory 1-1</label>
-                                </li>
-                                <li class="cat__item">
-                                    <input type="checkbox" id="sub__2">
-                                    <label for="sub__1">Sub Catagory 1-2</label>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="sub__catagory__2">
-                            <input type="checkbox" id="B">
-                            <label for="B">Catagory 2</label>
-                            <ul class="sub__catagory">
-                                <li class="cat__item">
-                                    <input type="checkbox" id="sub__2">
-                                    <label for="sub__2">Sub Catagory 2-1</label>
-                                </li>
-                                <li class="cat__item">
-                                    <input type="checkbox" id="sub__2">
-                                    <label for="sub__2">Sub Catagory 2-2</label>
-                                </li>
-                                <li class="cat__item">
-                                    <input type="checkbox" id="sub__2">
-                                    <label for="sub__2">Sub Catagory 2-3</label>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="sub__catagory__3">
-                            <input type="checkbox" id="C">
-                            <label for="C">Catagory 3</label>
-                            <ul class="sub__catagory">
-                                <li class="cat__item">
-                                    <input type="checkbox" id="sub__3">
-                                    <label for="sub__1">Sub Catagory 3-1</label>
-                                </li>
-                                <li class="cat__item">
-                                    <input type="checkbox" id="sub__3">
-                                    <label for="sub__1">Sub Catagory 3-2</label>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div> -->
                 <!-- Cards -->
                 <div class="cards__area">
                     <div class="cards">
@@ -198,71 +138,7 @@
                                     </div>
                                 </div>
                                 <div class="flag__status">
-                                    <i class="fa fa-circle color-picker" aria-hidden="true"></i>
-                                    <img class="flag__img" src="./img/flag.png" alt="">
-                                </div>
-                            </div>
-                            <!-- Card Content -->
-                            <div class="card__content">
-                                <div class="left">
-                                    <p>Race Name</p>
-                                    <p>Date/Year</p>
-                                    <p>Club</p>
-                                    <p>Laps</p>
-                                </div>
-                                <div class="right">
-                                    <p>Lorem Ipsum</p>
-                                    <p>28-07-20</p>
-                                    <div class="club__flag__name">
-                                        <img src="./img/club_flag.png" alt="">
-                                        <p>Club Name</p>
-                                    </div>
-                                    <p>5</p>
-                                </div>
-                            </div>
-                            <div class="card__footer">
-                                <div class="icons">
-                                    <i class="fas fa-share-alt-square share"></i>
-                                    <input class="check" type="checkbox" name="completed" id="">
-                                </div>
-                                <div class="card__footer__main">
-                                    <a class="more__button" href="#" onclick="toggle()">More</a>
-                                    <div class="like__sec">
-                                        <i class="fas fa-heart"></i>
-                                        <p>112+</p>
-                                    </div>
-                                    <div class="rating__star">
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card__item">
-                            <!-- Card Header -->
-                            <div class="card__header">
-                                <div class="profile__img">
-                                    <img src="./img/person.png" alt="">
-                                </div>
-                                <div class="name__trophy">
-                                    <div class="name__place">
-                                        <p class="user__name">Paul Miller</p>
-                                        <p class="user__place">1st</p>
-                                    </div>
-                                    <div class="race__name__year">
-                                        <p class="race__name">Race Name</p>
-                                        <p class="race__year">2020</p>
-                                    </div>
-                                    <div class="trophy__quantity">
-                                        <img class="trophy" src="./img/trophy.png" alt="">
-                                        <img class="quantity" src="./img/quantity.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="flag__status">
-                                    <i class="fa fa-circle color-picker" aria-hidden="true"></i>
+                                    <i class="fa fa-circle" aria-hidden="true"></i>
                                     <img class="flag__img" src="./img/flag.png" alt="">
                                 </div>
                             </div>
